# agent

./: .env.example  .gitignore  README.md  __init__.py  activate.ps1  config.yaml  debug_e2e.py  debug_llm.py  debug_routing.py  install_dependencies.py  main.py  pyproject.toml  requirements.txt  setup_env.ps1  test_agent.py  test_browser.py  test_data.xlsx  test_document.docx  test_regression.py  test_screen.py  test_vision.py  test_voice.py  verify_installation.py
actuators/: __init__.py  audio_control.py  browser_agent.py  office_ops.py  system_ops.py  windows_control.py
app/: __init__.py
app/core/: __init__.py  registry.py  router.py  tool_registry.py
app/interfaces/: __init__.py  tool.py  tool_interface.py
app/services/: __init__.py
app/services/ai/: __init__.py  chat.py  vision.py
app/services/office/: __init__.py  excel.py  excel_reader.py  word.py  word_writer.py
app/services/system/: __init__.py  brightness.py  brightness_control.py  launcher.py  process_manager.py  screen_capture.py  volume.py  volume_control.py
app/services/voice/: __init__.py  listener.py  speaker.py
app/services/web/: __init__.py  browser.py
app/utils/: __init__.py  result.py  safe_execution.py  safety.py
core/: __init__.py  context_manager.py  llm_engine.py  router.py  semantic_router.py
interfaces/: __init__.py  stt.py  tts.py  voice_loop.py
perception/: __init__.py  listeners.py  ocr.py  vision.py
tests/: __init__.py  test_all.py  test_core.py  test_office_ops.py  test_registry.py  test_system_ops.py
utils/: __init__.py  config.py  logging.py
