[tool.poetry]
name = "sovereign-desktop"
version = "0.1.0"
description = "A local-first, multimodal Windows agent powered by Llama 3.2 Vision"
authors = ["Sovereign Desktop Team"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/yourusername/sovereign-desktop"
keywords = ["ai", "agent", "local-first", "voice", "automation", "llm"]

[tool.poetry.dependencies]
python = "^3.11"
httpx = "^0.25.0"
pyyaml = "^6.0"
pyautogui = "^0.9.54"
pywin32 = "^306"
pynput = "^1.7.6"
pyperclip = "^1.8.2"
pycaw = "^20230407"
mss = "^9.0.0"
pillow = "^10.0.0"
pytesseract = "^0.3.10"
faster-whisper = "^0.10.0"
sounddevice = "^0.4.6"
soundfile = "^0.12.1"
playwright = "^1.40.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
black = "^23.0.0"
ruff = "^0.1.0"

[tool.poetry.scripts]
sovereign = "main:main"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
